test/pass/classes/check_class_generics.lly
class Box[A](a: A)
{
    var @a = a
}

class BoxTwo[A, B](a: A, b: B) < Box(a)
{
    var @b = b
    define f {
        BoxTwo::new(1, 2)
    }
}

class Container[A](value: A) {
    var @v: list[A] = [value]
}

var v = Box::new(10)
v = BoxTwo::new(1, "2")

var v2 = BoxTwo::new([10], "20")
var check: integer = v2.a[0]

var c: Container[integer] = Container::new(10)
c.v.append(10)
