test/fail/optargs/optarg_too_few.lly
#[
SyntaxError: Function f expects 1 to 2 args, but got 0.
    from optarg_too_few.lly:10
]#

define f(a: integer, b: *integer = 10) {

}

f()
